--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "node build.js",
-		"start": "node lib/index.cjs", 
+		"start": "node index.js", 
 		"dev": "node build.js --dev",
 		"prepack": "npm run build",
 		"format": "prettier --config .prettierrc.js --write .",
